# FlashcardsXBlock

./: .gitignore  mise.toml  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-frontend.yml  ci.yml  commitlint.yml  pypi-publish.yml
flashcards/: __init__.py  flashcards.py
flashcards/public/: student-ui.css  student-ui.js  studio-ui.css  studio-ui.js
flashcards/static/css/: flashcards.css
flashcards/static/html/: flashcards.html  flashcards_edit.html  new_editor.html  new_student.html  studio.html
flashcards/static/js/: student.js  studio.js
flashcards/static/js/src/: flashcards.js  flashcards_edit.js  student.js  studio.js
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  student.html  studio.html  tsconfig.json  vite.config.ts  vite.web.config.ts  vitest.config.ts
frontend/src/: index.scss  vite-env.d.ts
frontend/src/student-ui/: dev-preview.ts  index.tsx  student-ui.test.tsx  student-ui.tsx  style.scss
frontend/src/studio-ui/: TinyMceEditor.tsx  dev-preview.ts  editing-page.test.tsx  editing-page.tsx  index.tsx  studio-ui.test.tsx  studio-ui.tsx  style.scss  styling-page.test.tsx  styling-page.tsx
tests/: test_flashcards.py
