[project]
name = "FlashcardsXBlock"
version = "1.0.0-rc2"
description = "A Flashcards XBlock for Open edX."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = ["Python", "edx"]
dependencies = [
    "XBlock",  # XBlock framework
]

[project.urls]
Homepage = "https://github.com/open-craft/FlashcardsXBlock"

[project.entry-points."xblock.v1"]
flashcards = "flashcards:FlashcardsXBlock"

[tool.setuptools.packages.find]
include = ["flashcards", "flashcards.*"]
exclude = ["*tests"]

[tool.setuptools.package-data]
flashcards = ["static/**/*", "public/**/*"]

[dependency-groups]
test = [
    "pytest-cov",                # pytest extension for code coverage statistics
    "pytest-django",             # Django integration for pytest
    "pytest-env",                # pytest plugin to set environment variables
    "code-annotations",          # provides commands used by the pii_check make target
    "xblock-sdk",                # provides workbench settings for testing
    "openedx-django-pyfs",       # provides a dummy file system for testing
]
ci = [
    "tox",                       # Virtualenv management for tests
    "tox-uv",                    # Replace pip with uv in tox
]
quality = [
    "ruff",                      # Linter and formatter
]
dev = [
    {include-group = "test"},
    {include-group = "ci"},
    {include-group = "quality"},
    "diff-cover",                # Changeset diff test coverage
    "edx-i18n-tools",            # For i18n_tool dummy
    # External dev constraints (DO NOT REMOVE THIS LINE)
    "Django<5.0",
]

[tool.uv]
constraint-dependencies = [
    # External constraints (DO NOT REMOVE THIS LINE)
    "elasticsearch<7.14.0",
    "django-simple-history==3.0.0",
    "pip<24.3",
    "urllib3<2.3.0",
]

[tool.coverage.run]
omit = ['tests/*']

[tool.ruff]
line-length = 120
exclude = ['migrations', 'docs', 'manage.py']
target-version = 'py311'

[tool.ruff.lint]
select = [
    'F',    # Pyflakes
    'E',    # Pycodestyle (errors)
    'W',    # Pycodestyle (warnings)
    'C90',  # mccabe
    'I',    # isort
    'N',    # pep8-naming
    'D',    # pydocstyle
    'UP',   # pyupgrade
    'YTT',  # flake8-2020
    'ANN',  # flake8-annotations
    'ASYNC',# flake8-async
    'S',    # flake8-bandit
    'BLE',  # flake8-blind-except
    'FBT',  # flake8-boolean-trap
    'B',    # flake8-bugbear
    'A',    # flake8-builtins
    'COM',  # flake8-commas
    'C4',   # flake8-comprehensions
    'DTZ',  # flake8-datetimez
    'T10',  # flake8-debugger
    'DJ',   # flake8-django
    'EM',   # flake8-errmsg
    'EXE',  # flake8-executable
    'FA',   # flake8-future-annotations
    'ISC',  # flake8-implicit-str-concat
    'ICN',  # flake8-import-conventions
    'LOG',  # flake8-logging
    'G',    # flake8-logging-format
    'INP',  # flake8-no-pep420
    'PIE',  # flake8-pie
    'T20',  # flake8-print
    'PYI',  # flake8-pyi
    'PT',   # flake8-pytest-style
    'Q',    # flake8-quotes
    'RSE',  # flake8-raise
    'RET',  # flake8-return
    'SLF',  # flake8-self
    'SLOT', # flake8-slots
    'SIM',  # flake8-simplify
    'TID',  # flake8-tidy-imports
    'TC',   # flake8-type-checking
    'INT',  # flake8-gettext
    'ARG',  # flake8-unused-arguments
    'PTH',  # flake8-use-pathlib
    'TD',   # flake8-todos
    'ERA',  # eradicate
    'PD',   # pandas-vet
    'PGH',  # pygrep-hooks
    'PL',   # Pylint
    'TRY',  # tryceratops
    'FLY',  # flynt
    'NPY',  # NumPy-specific rules
    'AIR',  # Airflow
    'PERF', # Perflint
    'FURB', # refurb
    # TODO: Enable preview.
    # 'DOC',  # pydoclint
    'RUF',  # Ruff-specific rules
]
ignore = [
    'ANN002', # missing-type-args
    'ANN003', # missing-type-kwargs
    'ANN204', # missing-return-type-special-method
    'COM812', # missing-trailing-comma (incompatible with ruff formatter)
    'D203',   # one-blank-line-before-class
    'D212',   # multi-line-summary-first-line (incompatible with D213)
    'Q000',   # bad-quotes-inline-string
    'TD002',  # missing-t\odo-author
    'TD003',  # missing-t\odo-link
    'TRY003', # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
'tests/*' = [
    'S101',   # assert
    'INP001', # implicit-namespace-package
    'SLF001', # private-member-access
    'RUF018', # assignment-in-assert
    'D104',   # missing-docstring
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-magic-value-types = ['int', 'str']


[tool.pytest.ini_options]
env = "DJANGO_SETTINGS_MODULE=workbench.settings"
addopts = "--cov flashcards --cov-report term-missing --cov-report xml"
norecursedirs = ".* docs requirements site-packages"
filterwarnings = [
    "ignore:Runtime.user_id is deprecated:DeprecationWarning",
    "ignore:'cgi' is deprecated:DeprecationWarning",
]
